// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inputs Object > get blockList() 1`] = `undefined`;

exports[`Inputs Object > get blockList() 2`] = `undefined`;

exports[`Inputs Object > get blockList() 3`] = `
[
  "block1",
  "block2",
]
`;

exports[`Inputs Object > get blockList() 4`] = `undefined`;

exports[`Inputs Object > get section() 1`] = `"section"`;

exports[`Inputs Object > get section() 2`] = `"section"`;

exports[`Inputs Object > get section() 3`] = `"section"`;

exports[`Inputs Object > get section() 4`] = `"section"`;

exports[`Inputs Object > get template() 1`] = `undefined`;

exports[`Inputs Object > get template() 2`] = `undefined`;

exports[`Inputs Object > get template() 3`] = `undefined`;

exports[`Inputs Object > get template() 4`] = `"template"`;

exports[`Inputs Object > is invalid 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "_section must be a string",
      "minLength": "_section must be longer than or equal to 1 characters",
    },
    "property": "_section",
    "target": Inputs {
      "_blockList": undefined,
      "_section": undefined,
      "_template": undefined,
    },
    "value": undefined,
  },
]
`;

exports[`Inputs Object > is invalid 2`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "_section must be a string",
      "minLength": "_section must be longer than or equal to 1 characters",
    },
    "property": "_section",
    "target": Inputs {
      "_blockList": undefined,
      "_section": undefined,
      "_template": undefined,
    },
    "value": undefined,
  },
]
`;

exports[`Inputs Object > is invalid 3`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "minLength": "_section must be longer than or equal to 1 characters",
    },
    "property": "_section",
    "target": Inputs {
      "_blockList": undefined,
      "_section": "",
      "_template": undefined,
    },
    "value": "",
  },
]
`;

exports[`Inputs Object > is invalid 4`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "minLength": "each value in _blockList must be longer than or equal to 1 characters",
    },
    "property": "_blockList",
    "target": Inputs {
      "_blockList": [
        "",
      ],
      "_section": "section",
      "_template": undefined,
    },
    "value": [
      "",
    ],
  },
]
`;

exports[`Inputs Object > is invalid 5`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "minLength": "_template must be longer than or equal to 1 characters",
    },
    "property": "_template",
    "target": Inputs {
      "_blockList": [
        "block1",
        "block2",
      ],
      "_section": "section",
      "_template": "",
    },
    "value": "",
  },
]
`;
